--- a/src/app/success-dialog/success-dialog.component.html
+++ b/src/app/success-dialog/success-dialog.component.html
@@ -1,3 +1,4 @@
+<div style="background-color: #fff;">
 <div class="success-container">
     <!-- 播放影片 -->
     <video width="150" autoplay muted loop>
@@ -8,4 +9,4 @@
     <!-- 成功文字 -->
     <p class="success-text">提交成功！</p>
   </div>
-  
+</div>
