--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -1,3 +1,4 @@
+<div style="background-color: #fff;">
 <h2 mat-dialog-title class="title">確認操作</h2>
 
 <mat-dialog-content class="dialog-content">
@@ -25,3 +26,4 @@
   <button mat-raised-button class="btn btn-secondary" (click)="onCancel()">我再想想</button>
   <button mat-raised-button class="btn btn-primary" (click)="onConfirm()">確認送出</button>
 </mat-dialog-actions>
+</div>
