--- a/src/app/error-dialog/error-dialog.component.html
+++ b/src/app/error-dialog/error-dialog.component.html
@@ -1,7 +1,8 @@
+<div style="background-color: #fff;">
 <div class="dialog-container">
     <video autoplay muted loop class="error-video">
       <source src="error.mp4" type="video/mp4">
     </video>
     <p class="error-text">{{ data.message }}</p>
   </div>
-  
+</div>
