--- a/src/app/scheduling/scheduling.component.html
+++ b/src/app/scheduling/scheduling.component.html
@@ -254,7 +254,6 @@
             </tr>
           </tbody>
         </table>
-
       </div>
     </div>
 
@@ -279,17 +278,16 @@
 
 </div>
 
-<div *ngIf="viewMode === 'schedule'" class="schedule-wrapper">
-
-  <!-- 月份導覽列：白底＋置中 -->
+@if (viewMode === 'schedule') {
+  <div class="schedule-wrapper">
   <div class="month-nav">
-    <button class="nav" (click)="prevMonth()" aria-label="上一月">
+    <button class="nav" (click)="prevMonth()" >
       <mat-icon>chevron_left</mat-icon>
     </button>
 
     <div class="month-nav-title">{{ scheduleMonthLabel }}</div>
 
-    <button class="nav" (click)="nextMonth()" aria-label="下一月">
+    <button class="nav" (click)="nextMonth()" >
       <mat-icon>chevron_right</mat-icon>
     </button>
   </div>
@@ -297,4 +295,5 @@
 
   <daypilot-scheduler #scheduler class="scheduler" [config]="config" [events]="events">
   </daypilot-scheduler>
-</div>
+</div>  
+}
